2013-05-28 Matthew LeGendre <legendre1@llnl.gov>
	* src/STAT_BackEnd.C: Added BGQ Timeouts during hang while stackwalking

2013-05-15 Gregory L. Lee <lee218@llnl.gov>
	* scripts/stat-cl.in : enable -c by default
	* src/STAT.C : -P -i -t will disable -c

2013-05-14 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : write to perf file after every merge

2013-05-10 Gregory L. Lee <lee218@llnl.gov>
	* : integrated DysectAPI from Niklas Nielsen
	* src/MRNetSymbolReader.h : removed BGQ FGFS workaround

2013-04-30 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed handling of missing ranks list for STATBench

2013-04-29 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed handling of missing ranks list for STATBench

2013-04-28 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed memory bug in  bit vector size in case where some daemons don't connect

2013-04-24 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : reset static connect timeout variables between jobs

2013-03-15 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : add runjob to default list of job launchers
	* doc/src/stat_preference_files.sgml : update share app nodes note about BG systems

2013-03-14 Gregory L. Lee <lee218@llnl.gov>
	* : updated source links from outreach center to github

2013-03-14 Matthew P. LeGendre <legendre1@llnl.gov>
	* src/STAT_BackEnd.[h,C] : fixed edge labeling of error nodes

2013-03-13 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.[h,C], src/STAT_CircularLogs.[h,C] : code clean up
	* src/STAT_BackEnd.[h,C], src/MRNetSymbolReader.h : use SW_VERSION_8_1_0 instead of 8_0_1
	* src/MRNetSymbolReader.h : fixed SW/Symtab version dependences

2013-03-13 Matthew P. LeGendre <legendre1@llnl.gov>
	* src/STAT_BackEnd.[h,C] : added signal handler to dump debug info on crash

2013-03-12 Matthew P. LeGendre <legendre1@llnl.gov>
	* src/STAT_BackEnd.[h,C] : modified to use circular log