@@ -1,5 +1,10 @@
+2013-06-05 Gregory L. Lee <lee218@llnl.gov>
+	* src/STAT_BackEnd.C : Dump local stack traces on signal
+	* src/STAT_FrontEnd.C : Send output directory and file prefix to BE on attach
+	* src/STAT.h : incremented minor version for protocol change
+
 2013-05-28 Matthew LeGendre <legendre1@llnl.gov>
-	* src/STAT_BackEnd.C: Added BGQ Timeouts during hang while stackwalking
+	* src/STAT_BackEnd.C : Added BGQ Timeouts during hang while stackwalking
 
 2013-05-15 Gregory L. Lee <lee218@llnl.gov>
 	* scripts/stat-cl.in : enable -c by default
